--- a/jgdfit/results_fps.tex
+++ b/jgdfit/results_fps.tex
@@ -10,7 +10,7 @@ The distribution of flight formats is as in Table
 \ref{tab:fpsformat}, also selecting for formats in which all of the pilots
 fly the same figures.
 
-\begin{table}[tbp]
+\begin{table}[htbp]
   \centering
   \begin{tabular}{r r r r r r}
   Known & Unknown & Unknown II & Flight 1 \\
@@ -49,7 +49,7 @@ The correlations between the four measures are stronger than for the
 all-figures data.
 Find their values in Table \ref{table:fpscorr}.
 
-\begin{table}[tbp]
+\begin{table}[htbp]
   \begin{tabular}{l | r r r r}
   & sw & lf & ad & cvm \\
    \hline
@@ -72,7 +72,7 @@ There was only one valid result for the Chi-Squared test due to the
 reduced number of grade data points within the FPS groups. For that reason,
 we omit the Chi-Squared result.
 
-\begin{table}[tbp]
+\begin{table}[htbp]
 \centering
 \begin{tabular}{l | r r r r}
 & Invalid & Valid & $> 0.05$ & $<= 0.05$ \\
@@ -110,7 +110,7 @@ At the smallest p-value seen in Figure \ref{fig:fps:min} we find a
 judge who, looking at three figures from seven pilots, almost always
 gave a grade of 9.0 with the few exceptions being a grade of 8.0.
 
-\begin{figure}[p]
+\begin{figure}[htbp]
   \centering
   \includegraphics[width=\columnwidth]{{fps-Min-f6142-jX1442-6.67-01}.png}
   \caption{FPS groups example at minimum Anderson-Darling p-value}
@@ -121,7 +121,7 @@ At the first quantile upper limit seen in Figure \ref{fig:fps:one}
 we find a judge who most often gives a grade of seven, rarely lower and
 sometimes higher. This results in a skew toward the lower values.
 
-\begin{figure}[p]
+\begin{figure}[htbp]
   \centering
   \includegraphics[width=\columnwidth]{{fps-1st-f6432-jX157-22.00-01}.png}
   \caption{FPS groups example at first quantile Anderson-Darling p-value}
@@ -139,7 +139,7 @@ figure. The normal distribution would have more of those eights as
 7.5 or 7.0 grades, resulting in a little bit of a skew toward the higher
 grades, mostly due to too many in the middle.
 
-\begin{figure}[p]
+\begin{figure}[htbp]
   \centering
   \includegraphics[width=\columnwidth]{{fps-Med-f10531-jX216-10.00-01}.png}
   \caption{FPS groups first example at second quantile Anderson-Darling p-value}
@@ -149,7 +149,7 @@ grades, mostly due to too many in the middle.
 In figure \ref{fig:fps:twob} the judge gives an almost uniform distribution
 from 7.0 to 9.0, although with a complete absence of grade 7.5.
 
-\begin{figure}[p]
+\begin{figure}[htbp]
   \centering
   \includegraphics[width=\columnwidth]{{fps-Med-f10531-jX216-10.00-02}.png}
   \caption{FPS groups second example at second quantile Anderson-Darling p-value}
@@ -161,7 +161,7 @@ from 4.0 to 9.0.
 Due to there being only thirteen grades in all, the distribution contains
 zero, one, two, or three instances of each possible grade in the range.
 
-\begin{figure}[p]
+\begin{figure}[htbp]
   \centering
   \includegraphics[width=\columnwidth]{{fps-Med-f10531-jX216-10.00-03}.png}
   \caption{FPS groups third example at second quantile Anderson-Darling p-value}
@@ -174,7 +174,7 @@ a couple of instances above or below. More in the middle and fewer at the
 tails makes for a better fit to normal, but few of the individual judge
 grade counts match the density that would be expected from the normal.
 
-\begin{figure}[p]
+\begin{figure}[htbp]
   \centering
   \includegraphics[width=\columnwidth]{{fps-3rd-f10767-jX125-17.20-01}.png}
   \caption{FPS groups example at third quantile Anderson-Darling p-value}
@@ -185,7 +185,7 @@ At the maximum value seen in Figure \ref{fig:fps:max}
 we have a better filled spread of grades with, as for the third quantile,
 more grades near the mean.
 
-\begin{figure}[p]
+\begin{figure}[htbp]
   \centering
   \includegraphics[width=\columnwidth]{{fps-Max-f7758-jX1695-32.50-01}.png}
   \caption{FPS groups example at maximum Anderson-Darling p-value}
