--- a/jgdfit/main.tex
+++ b/jgdfit/main.tex
@@ -27,6 +27,8 @@
 \include*{results_all}
 \include*{results_fps}
 
+\include*{conclusions}
+
 \bibliographystyle{plain}
 \bibliography{references}
 \end{document}
