Add reference to source

--- a/jgdfit/measurements.tex
+++ b/jgdfit/measurements.tex
@@ -6,3 +6,6 @@ The data is rounded. A judge does not have a continuous range between
 zero and ten, but must round to the nearest half grade. This means that
 it must either be treated as discrete, using buckets as with Chi-Square,
 or given random perturbations in order to make them continuous.
+
+The full data set, together with R code for retrieval and analysis, is
+available from \cite{acdstats}.
