--- a/jgdfit/references.bib
+++ b/jgdfit/references.bib
@@ -94,3 +94,9 @@
   howpublished={\url{https://iaccdb.iac.org/}},
   url={https://iaccdb.iac.org/},
 }
+@misc{acdstats,
+  title="ACD Stats",
+  publisher="GitHub",
+  howpublished={\url{https://github.com/wbreeze/acd_stats/}},
+  url={https://github.com/wbreeze/acd_stats/},
+}
