Revise introductory material for clarity and brevity

--- a/jgdfit/main.tex
+++ b/jgdfit/main.tex
@@ -2,7 +2,7 @@
 
 \title{Distribution of grades from aerobatic judges, goodness of fit to normal}
 \author{Douglas Lovell}
-\date{Draft, November, 2019}
+\date{Draft, January, 2020}
 
 \usepackage{newclude}
 \usepackage{url}
@@ -16,8 +16,9 @@
   judges observing from the ground.
   Aerobatic competitions at the world level are scored using a statistical
   scoring system that treats judge grades as if they are normally distributed.
-  This paper reports goodness of fit to normal for judge grades from a large
-  number of aerobatic contests.
+  This paper measures goodness of fit to the normal distribution of
+  grades given by judges in 2710 flight programs from IAC contests
+  during six years from 2014 to 2019, and reports the results.
 \end{abstract}
 \include*{grading}
 \include*{measurements}
