--- a/jgdfit/grading.tex
+++ b/jgdfit/grading.tex
@@ -12,69 +12,47 @@ The largest contests are the World Aerobatic Championship \cite{wac}
 and the World Advanced Aerobatic Championship, which attract about sixty
 pilots, mostly from Europe and the United States.
 
-The airplanes flown at the world level cost as much as \$400,000 U.S. dollars.
-The pilots as individuals and as part of national teams invest years of
-training and practice whose value equals or exceeds that of the airplane.
-The total investment brought by pilots and national teams to the
-CIVA world contests can be estimated at about forty million U.S. dollars.
-
 The IAC flies about forty regional contests and one national contest
 per year in the United States.
 Results from IAC contests are posted online \cite{iaccdb}
 in human and machine readable formats.
 
-In aerobatics, pilots fly figures made up of a basic flight path
-overlaid with rolls, in which the airplane moves about it's fuselage
-while it's center continues on the flight path.
+\subsection{Grading}
 
 A ``flight program'' consists of each of the competing pilots flying a sequence
 of figures in front of the judges. The sequences of figures are predetermined
 for the flight program by any one of several methods.
 Judges receive the sequences that each pilot will fly in order to evaluate
-the sequence actually flown against the sequence commited to fly by the pilot.
+each figure flown by the pilot and give it a grade.
 
-\subsection{Grading}
+The grade is a value from zero to ten in half point increments.
+A flight program produces a grade $g_{j,p,f}$
+from each judge $j$ for each figure $f$ flown by each pilot $p$.
 
-The judges give each figure a grade from zero to ten in half point increments.
-They start from a perfect score of ten, and systematically deduct for flaws in
-the direction of the flight path, radius of loops, and degrees of roll.  Thus,
-a flight program produces a three-dimensional matrix of grades consisting of
-Pilot X Judge X Figure.  Each pilot receives one grade from each judge for each
-figure.
+\section{Tested hypothesis}
 
-To complicate the grading slightly, a zero grade can take multiple forms.
-One form is that incremental flaws resulted in deductions that summed to
-ten or more. This is known as a ``soft zero''. A second form is that the
-figure flown did not match the figure that was supposed to be flown.
-It might have been missing a roll element or not have been flown along
-the prescribed flight path. This is known as a ``hard zero''. CIVA uses
-a form known as a ``presentation zero'' that a judge may use to indicate
-suspicion of a hard zero. A ``conference zero'' indicates that the judge
-changed their grade to a hard zero in review following the performance
-of the pilot.
+CIVA contests use a statistical system of converting judge grades to scores,
+which system is documented in the FAI sporting code as FPS \cite{fps}.
 
-A judge may also give a grade of ``average''. A grade of average indicates
-that the judge was either distracted or unsure of the figure that was
-prescribed to be flown and therefore unable to evaluate the figure performed
-against the figure prescribed. It is preferred that the judge give an
-average under these conditions, rather than make-up a grade.
-The effect of averages is a reduction in the number of judges evaluating
-the figure.
+The CIVA FPS represents subsets $G$ of the grades $g_{j,p,f}$
+as the normal distribution derived from their mean and variance,
+$Normal(\mu_G, \sigma^2_G)$.
+It does this in order to normalize and
+compare grades given by the different judges.
+The validity of the normal distribution
+representation of the grades is fundamental to the correctness of the
+method.  If it is not valid, it may be argued that the method is fundamentally
+flawed.
 
-\subsection{Scoring}
+This paper measures goodness of fit to the normal distribution of
+grades given by judges in 2710 flight programs from IAC contests
+during six years from 2014 to 2019, and reports the results.
 
-CIVA contests use a statistical system of converting judge grades to scores
-documented in the FAI sporting code as FPS \cite{fps}.
-The system normalizes judge grades using their mean and standard deviation,
-then determines upper and lower bounds based upon the mean and standard
-deviation of the grades from all of the judges. It then replaces
-individual judge grades exceeding these bounds with fitted (mean, normalized)
-grade values before computing a final score for each pilot.
-
-The FPS makes the normalization and outlying grade computations using
-grades from figure groups, which usually consist of grades for
-one figure flown by all of the pilots in one flight program, and with all
-of the grades from one flight program.
-
-This paper examines whether the distribution of individual judge grades from
-aerobatic contests fit the normal distribution as used by the CIVA FPS.
+For a particular judge $j$ we have a set
+$G = g_{j,p_1,f_1}, g_{p_2,f_1}, ..., g_{j,p_n,f_1}, ..., g_{j,p_n,f_m}$
+as grades given $n$ different pilots flying the same $m$ figures
+in a flight program. The grades are discrete, measured in $1/2$
+increments from 0 to 10.  We test the null hypothesis $H0$ that the grades
+$G$ fit
+the normal distribution derived from their mean and variance,
+$Normal(\mu_G, \sigma^2_G)$.
