Specify use of normalization in FPS

--- a/jgdfit/grading.tex
+++ b/jgdfit/grading.tex
@@ -38,7 +38,7 @@ The CIVA FPS represents subsets $G$ of the grades $g_{j,p,f}$
 as the normal distribution derived from their mean and variance,
 $Normal(\mu_G, \sigma^2_G)$.
 It does this in order to normalize and
-compare grades given by the different judges.
+identify grades not in keeping with those from other judges.
 The validity of the normal distribution
 representation of the grades is fundamental to the correctness of the
 method.  If it is not valid, it may be argued that the method is fundamentally
