Better describe the impact in the abstract

--- a/jgdfit/main.tex
+++ b/jgdfit/main.tex
@@ -2,7 +2,7 @@
 
 \title{Distribution of grades from aerobatic judges, goodness of fit to normal}
 \author{Douglas Lovell}
-\date{Draft, January, 2020}
+\date{Draft, July, 2020}
 
 \usepackage{newclude}
 \usepackage{url}
@@ -12,13 +12,24 @@
 \begin{document}
 \maketitle
 \begin{abstract}
-  The sport of competition aerobatics is flown by pilots and graded by
+  In the sport of competition aerobatics, pilots fly combinations of loops,
+  rolls, and other maneuvers in high performance airplanes, in front of
   judges observing from the ground.
-  Aerobatic competitions at the world level are scored using a statistical
-  scoring system that treats judge grades as if they are normally distributed.
-  This paper measures goodness of fit to the normal distribution of
+  The judges quantify the quality of the loop and roll combinations
+  using grades.
+
+  At the world level, a statistical
+  scoring system treats judge grades as if they are normally distributed,
+  in an attempt to detect and eliminate biases among the judges
+  and produce scores that rank the pilots.
+
+  This paper reports goodness of fit to the normal distribution of
   grades given by judges in 2710 flight programs from IAC contests
   during six years from 2014 to 2019, and reports the results.
+  The measurements show that the normal distribution is a poor fit for
+  the grades of the judges. The poor fit for the normal distribution challenges
+  the validity of the statistical scoring system and the results produced
+  by it.
 \end{abstract}
 \include*{grading}
 \include*{measurements}
