Reduce to nine pages

--- a/jgdfit/main.tex
+++ b/jgdfit/main.tex
@@ -26,8 +26,8 @@
   This paper reports goodness of fit to the normal distribution of
   grades given by judges in 2710 flight programs from IAC contests
   during six years from 2014 to 2019, and reports the results.
-  The measurements show that the normal distribution is a poor fit for
-  the grades of the judges. The poor fit for the normal distribution challenges
+  The measurements show poor fit to the grades of the judges.
+  The poor fit for the normal distribution challenges
   the validity of the statistical scoring system and the results produced
   by it.
 \end{abstract}
