--- a/jgdfit/results_fps.tex
+++ b/jgdfit/results_fps.tex
@@ -1,4 +1,4 @@
-\section{FPS groups}
+\subsection{FPS groups}
 
 The distribution of grades given by a judge over all figures in a flight
 provides measures of a larger number of grades. The FPS however uses figure
