Remove unnecessary words

--- a/jgdfit/conclusions.tex
+++ b/jgdfit/conclusions.tex
@@ -1,6 +1,6 @@
 \section{Conclusions}
 
-The judge grade data is rounded data in that judges are limited to giving
+The judge grade data is rounded data because judges are limited to giving
 grades in increments of 0.5. The literature provides precedent for applying
 random perturbations to make the data continuous, then using the continuous
 tests for goodness of fit to normal.
