--- a/jgdfit/main.tex
+++ b/jgdfit/main.tex
@@ -24,7 +24,7 @@
   and produce scores that rank the pilots.
 
   This paper reports goodness of fit to the normal distribution of
-  grades given by judges in 2710 flight programs from IAC contests
+  grades given by judges in 2710 flight programs
   during six years from 2014 to 2019, and reports the results.
   The measurements show poor fit to the grades of the judges.
   The poor fit for the normal distribution challenges
