--- a/jgdfit/measurements.tex
+++ b/jgdfit/measurements.tex
@@ -1,11 +1,11 @@
 \section{Measurements}
-We apply a number of standard measures of goodness of fit. The measures used
-are Chi-Square, Anderson-Darling, Shapiro-Wilk, Lilifords, and Cramer-von Mises.
+We apply a number of standard measures of goodness of fit--
+Chi-Square, Anderson-Darling, Shapiro-Wilk, Lilifords, and Cramer-von Mises.
 
 The data is rounded. A judge does not have a continuous range between
 zero and ten, but must round to the nearest half grade. This means that
-it must either be treated as discrete, using buckets as with Chi-Square,
-or given random perturbations in order to make them continuous.
+it must either be treated as discrete, using clusters as with Chi-Square,
+or given random perturbations in order to make it continuous.
 
 The full data set, together with R code for retrieval and analysis, is
 available from \cite{acdstats}.
