--- a/jgdfit/results.tex
+++ b/jgdfit/results.tex
@@ -1,18 +1,15 @@
 \section{Judge Grade Distributions}
 
-We can now look at the results measures of distributions'
-fit to the normal distribution model derived from the mean and standard
-deviations of collections of grades from a judge.
-
-In the following, we look at the data in two ways. First, we look at all of
+We can now look at the goodness of fit measured results.
+We measured in two ways. First, we measured fit to all of
 the grades given by a judge for a particular flight. This results in more
 grades; however, those grades are given to a large variety of figures of
 all basic types and difficulties within the category graded.
 
-Second, we look at grades from FPS figure groups. The FPS groups and
-normalizes grades according to the figure graded. When there are fewer than
-a dozen pilots, FPS combines grades given to figures of similar difficulty
-such that there are a minimum of a dozen grades in a figure group.
+Second, we measured fit to grades from FPS figure groups. The FPS groups
+grades according to the figure graded. When there are fewer than
+a dozen pilots, FPS combines grades given to figures of similar difficulty such
+that there are a minimum of a dozen grades in a figure group.
 
 In both cases, we look only at flights for
 which there were more than five pilots and more than eleven grades given.
