--- a/jgdfit/grading.tex
+++ b/jgdfit/grading.tex
@@ -27,7 +27,7 @@ each figure flown by the pilot and give it a grade.
 
 The grade is a value from zero to ten in half point increments.
 A flight program produces a grade $g_{j,p,f}$
-from each judge $j$ for each figure $f$ flown by each pilot $p$.
+given by each judge $j$ for each figure $f$ flown by each pilot $p$.
 
 \section{Tested hypothesis}
 
@@ -38,12 +38,11 @@ which system is documented in the FAI sporting code as the "Fair Play System"
 The CIVA FPS represents subsets $G$ of the grades $g_{j,p,f}$
 as the normal distribution derived from their mean and variance,
 $Normal(\mu_G, \sigma^2_G)$.
-It does this in order to normalize and
+It does this in order to compare and
 identify grades not in keeping with those from other judges.
 The validity of the normal distribution
-representation of the grades is fundamental to the correctness of the
-method.  If it is not valid, it may be argued that the method is fundamentally
-flawed.
+representation of the grades is fundamental to the correctness of the method.
+If it is not valid, the method is fundamentally flawed.
 
 This paper measures goodness of fit to the normal distribution of
 grades given by judges in 2710 flight programs from IAC contests
